--- a/we_count/package.json
+++ b/we_count/package.json
@@ -24,6 +24,7 @@
     "@nuxtjs/eslint-module": "^1.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^6.1.0",
+    "eslint-config-fluid": "^1.4.0",
     "eslint-plugin-nuxt": ">=0.4.2"
   }
 }
