--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"build": "nuxt build",
 		"start": "nuxt start",
 		"generate": "nuxt generate",
-		"lint": "eslint --ext .js,.vue --ignore-path .gitignore .; exit 0",
+		"lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
 		"lint:fix": "eslint --ext .js,.vue --ignore-path .gitignore . --fix"
 	},
 	"dependencies": {
