--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"start": "nuxt start",
 		"generate": "nuxt generate",
 		"lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-		"lint:fix": "eslint --ext .js,.vue --ignore-path .gitignore . --fix"
+		"lint:fix": "eslint --ext .js,.vue --ignore-path .gitignore . --fix",
+		"test": "lint"
 	},
 	"dependencies": {
 		"@inotom/vue-nav-drawer": "^1.1.0",
