--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"dev": "nuxt",
 		"build": "nuxt build",
 		"start": "nuxt start",
-		"generate": "nuxt generate",
+		"generate": "nuxt generate --fail-on-error",
 		"lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
 		"lint:fix": "eslint --ext .js,.vue --ignore-path .gitignore . --fix",
 		"test": "npm run lint"
