--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
 		"build": "nuxt build",
 		"start": "nuxt start",
 		"generate": "nuxt generate --fail-on-error",
-		"lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-		"lint:fix": "eslint --ext .js,.vue --ignore-path .gitignore . --fix",
+		"lint": "eslint --ext .js,.vue --ignore-path .gitignore . && stylelint \"**/**.{css,vue}\"",
+		"lint:fix": "eslint --ext .js,.vue --ignore-path .gitignore . --fix && stylelint \"**/**.{css,vue}\" --fix",
 		"test": "npm run lint"
 	},
 	"dependencies": {
@@ -29,6 +29,9 @@
 		"babel-eslint": "^10.0.1",
 		"eslint": "^6.1.0",
 		"eslint-config-fluid": "^1.4.0",
-		"eslint-plugin-nuxt": ">=0.4.2"
+		"eslint-plugin-nuxt": ">=0.4.2",
+		"stylelint": "^13.1.0",
+		"stylelint-config-recommended": "^3.0.0",
+		"stylelint-order": "^4.0.0"
 	}
 }
