tooling: add markdownlint, update readme

--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
 		"build": "nuxt build",
 		"start": "nuxt start",
 		"generate": "nuxt generate --fail-on-error",
-		"lint": "eslint --ext .js,.vue --ignore-path .gitignore . && stylelint \"**/**.{css,vue}\"",
-		"lint:fix": "eslint --ext .js,.vue --ignore-path .gitignore . --fix && stylelint \"**/**.{css,vue}\" --fix",
+		"lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
+		"lint:css": "stylelint \"**/**.{css,vue}\"",
+		"lint:md": "markdownlint \"**/***.md\" --ignore-path .gitignore",
+		"lint-fix:js": "npm run lint:js - --fix",
+		"lint-fix:css": "npm run lint:css - --fix",
+		"lint": "npm-run-all lint:*",
+		"lint:fix": "npm-run-all lint-fix:*",
 		"test": "npm run lint"
 	},
 	"dependencies": {
-		"@inotom/vue-nav-drawer": "^1.1.0",
 		"@nuxtjs/axios": "^5.3.6",
 		"@nuxtjs/bulma": "^1.2.6",
 		"@nuxtjs/dotenv": "^1.4.0",
@@ -30,6 +34,9 @@
 		"eslint": "^6.1.0",
 		"eslint-config-fluid": "^1.4.0",
 		"eslint-plugin-nuxt": ">=0.4.2",
+		"markdownlint": "^0.19.0",
+		"markdownlint-cli": "^0.22.0",
+		"npm-run-all": "^4.1.5",
 		"stylelint": "^13.1.0",
 		"stylelint-config-recommended": "^3.0.0",
 		"stylelint-order": "^4.0.0"
