tooling: add markdownlint to lint:fix

--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
 		"lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
 		"lint:css": "stylelint \"**/**.{css,vue}\"",
 		"lint:md": "markdownlint \"**/***.md\" --ignore-path .gitignore",
-		"lint-fix:js": "npm run lint:js - --fix",
-		"lint-fix:css": "npm run lint:css - --fix",
-		"lint": "npm-run-all lint:*",
+		"lint-fix:js": "eslint --ext .js,.vue --ignore-path .gitignore . --fix",
+		"lint-fix:css": "stylelint \"**/**.{css,vue}\" --fix",
+		"lint-fix:md": "markdownlint \"**/***.md\" --ignore-path .gitignore --fix",
+		"lint": "npm-run-all lint:js lint:css lint:md",
 		"lint:fix": "npm-run-all lint-fix:*",
 		"test": "npm run lint"
 	},
@@ -34,7 +35,6 @@
 		"eslint": "^6.1.0",
 		"eslint-config-fluid": "^1.4.0",
 		"eslint-plugin-nuxt": ">=0.4.2",
-		"markdownlint": "^0.19.0",
 		"markdownlint-cli": "^0.22.0",
 		"npm-run-all": "^4.1.5",
 		"stylelint": "^13.1.0",
