--- a/package.json
+++ b/package.json
@@ -27,16 +27,33 @@
 		"nuxt": "^2.0.0"
 	},
 	"devDependencies": {
+		"@commitlint/cli": "^8.3.5",
+		"@commitlint/config-conventional": "^8.3.4",
 		"@nuxtjs/eslint-config": "^1.0.1",
 		"@nuxtjs/eslint-module": "^1.0.0",
 		"babel-eslint": "^10.0.1",
 		"eslint": "^6.1.0",
-		"eslint-config-fluid": "^1.4.0",
 		"eslint-plugin-nuxt": ">=0.4.2",
+		"husky": "^4.2.3",
+		"lint-staged": "^10.0.8",
 		"markdownlint-cli": "^0.22.0",
 		"npm-run-all": "^4.1.5",
 		"stylelint": "^13.1.0",
 		"stylelint-config-recommended": "^3.0.0",
 		"stylelint-order": "^4.0.0"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged",
+			"commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+		}
+	},
+	"lint-staged": {
+		"*.{css,scss,vue}": [
+			"stylelint"
+		],
+		"*.{js,vue}": [
+			"eslint"
+		]
 	}
 }
