--- a/package.json
+++ b/package.json
@@ -33,13 +33,10 @@
 		"eslint": "^6.1.0",
 		"eslint-config-fluid": "^1.4.0",
 		"eslint-plugin-nuxt": ">=0.4.2",
-		"faker": "^4.1.0",
 		"markdownlint-cli": "^0.22.0",
 		"npm-run-all": "^4.1.5",
-		"slugify": "^1.3.6",
 		"stylelint": "^13.1.0",
 		"stylelint-config-recommended": "^3.0.0",
-		"stylelint-order": "^4.0.0",
-		"title": "^3.4.1"
+		"stylelint-order": "^4.0.0"
 	}
 }
