--- a/package.json
+++ b/package.json
@@ -15,20 +15,19 @@
 		"start": "nuxt start",
 		"generate": "nuxt generate --fail-on-error",
 		"lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
-		"lint:css": "stylelint \"**/**.{css,vue}\"",
+		"lint:css": "stylelint \"**/**.{scss,vue}\"",
 		"lint:md": "markdownlint \"**/***.md\" --ignore-path .gitignore --ignore LICENSE.md --ignore .github/**/*.md",
 		"lint-fix:js": "eslint --ext .js,.vue --ignore-path .gitignore . --fix",
-		"lint-fix:css": "stylelint \"**/**.{css,vue}\" --fix",
+		"lint-fix:css": "stylelint \"**/**.{scss,vue}\" --fix",
 		"lint-fix:md": "markdownlint \"**/***.md\" --ignore-path .gitignore --ignore LICENSE.md --ignore .github/**/*.md --fix",
 		"lint": "npm-run-all lint:js lint:css lint:md",
 		"lint:fix": "npm-run-all lint-fix:*",
 		"test": "npm run lint"
 	},
 	"dependencies": {
-		"@nuxtjs/axios": "^5.3.6",
-		"@nuxtjs/bulma": "^1.2.6",
+		"@nuxtjs/axios": "^5.9.5",
 		"@nuxtjs/dotenv": "^1.4.0",
-		"@nuxtjs/pwa": "^3.0.0-0",
+		"@nuxtjs/pwa": "^3.0.0-beta.20",
 		"@nuxtjs/style-resources": "^1.0.0",
 		"bulma": "^0.8.0",
 		"nuxt": "^2.0.0"
@@ -38,18 +37,19 @@
 		"@commitlint/config-conventional": "^8.3.4",
 		"@nuxtjs/eslint-config": "^1.0.1",
 		"@nuxtjs/eslint-module": "^1.0.0",
-		"babel-eslint": "^10.0.1",
-		"eslint": "^6.1.0",
-		"eslint-plugin-nuxt": ">=0.4.2",
+		"babel-eslint": "^10.1.0",
+		"eslint": "^6.8.0",
+		"eslint-plugin-nuxt": "^0.5.1",
 		"husky": "^4.2.3",
 		"lint-staged": "^10.0.8",
 		"markdownlint-cli": "^0.22.0",
 		"node-sass": "^4.13.1",
 		"npm-run-all": "^4.1.5",
 		"sass-loader": "^8.0.2",
-		"stylelint": "^13.1.0",
-		"stylelint-config-recommended": "^3.0.0",
-		"stylelint-order": "^4.0.0"
+		"stylelint": "^13.2.0",
+		"stylelint-config-recommended-scss": "^4.2.0",
+		"stylelint-order": "^4.0.0",
+		"stylelint-scss": "^3.14.2"
 	},
 	"husky": {
 		"hooks": {
@@ -58,7 +58,7 @@
 		}
 	},
 	"lint-staged": {
-		"*.{css,scss,vue}": [
+		"*.{scss,vue}": [
 			"stylelint"
 		],
 		"*.{js,vue}": [
