--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"markdownlint-cli": "^0.22.0",
 		"node-sass": "^4.13.1",
 		"npm-run-all": "^4.1.5",
+		"nuxt-webfontloader": "^1.1.0",
 		"sass-loader": "^8.0.2",
 		"stylelint": "^13.2.0",
 		"stylelint-config-recommended-scss": "^4.2.0",
