--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@nuxtjs/axios": "^5.9.5",
 		"@nuxtjs/dotenv": "^1.4.0",
 		"@nuxtjs/pwa": "^3.0.0-beta.20",
+		"@nuxtjs/svg": "^0.1.6",
 		"nuxt": "^2.0.0"
 	},
 	"devDependencies": {
