--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
 		"@nuxtjs/axios": "^5.9.5",
 		"@nuxtjs/dotenv": "^1.4.0",
 		"@nuxtjs/pwa": "^3.0.0-beta.20",
-		"nuxt": "^2.0.0"
+		"nuxt": "^2.0.0",
+		"sanitize.css": "^11.0.0"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^8.3.5",
