--- a/package.json
+++ b/package.json
@@ -29,8 +29,13 @@
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "@nuxtjs/svg": "^0.1.7",
+    "child_process": "^1.0.2",
+    "fs": "0.0.1-security",
+    "jsdom": "^16.2.2",
+    "net": "^1.0.2",
     "nuxt": "^2.12.2",
-    "sanitize.css": "^11.0.0"
+    "sanitize.css": "^11.0.0",
+    "tls": "0.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
