--- a/package.json
+++ b/package.json
@@ -37,10 +37,8 @@
     "child_process": "^1.0.2",
     "fs": "0.0.1-security",
     "jsdom": "^16.2.2",
-    "net": "^1.0.2",
     "nuxt": "^2.12.2",
-    "sanitize.css": "^11.0.0",
-    "tls": "0.0.1"
+    "sanitize.css": "^11.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
