--- a/package.json
+++ b/package.json
@@ -30,36 +30,35 @@
     "test": "npm run lint"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.9.7",
+    "@nuxtjs/axios": "^5.10.1",
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
-    "@nuxtjs/svg": "^0.1.7",
-    "child_process": "^1.0.2",
-    "fs": "0.0.1-security",
-    "jsdom": "^16.2.2",
+    "@nuxtjs/svg": "^0.1.11",
     "nuxt": "^2.12.2",
+    "nuxt-payload-extractor": "^1.0.0",
     "sanitize.css": "^11.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@nuxtjs/eslint-config": "^1.0.1",
-    "@nuxtjs/eslint-module": "^1.0.0",
+    "@nuxtjs/eslint-module": "^1.2.0",
     "babel-eslint": "^10.1.0",
+    "cheerio": "^1.0.0-rc.3",
     "eslint": "^6.8.0",
     "eslint-plugin-nuxt": "^0.5.2",
-    "husky": "^4.2.3",
-    "lint-staged": "^10.1.2",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.1.7",
     "markdownlint-cli": "^0.22.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.0",
     "npm-run-all": "^4.1.5",
     "nuxt-webfontloader": "^1.1.0",
     "release": "^6.1.0",
     "sass-loader": "^8.0.2",
-    "stylelint": "^13.3.0",
+    "stylelint": "^13.3.3",
     "stylelint-config-standard-scss": "^1.1.0",
     "stylelint-order": "^4.0.0",
-    "stylelint-scss": "^3.16.0"
+    "stylelint-scss": "^3.17.1"
   },
   "husky": {
     "hooks": {
