chore(docs): update docs for Eleventy (first pass)

--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
       "stylelint"
     ],
     "*.md": [
-      "markdownlint --ignore LICENSE.md"
+      "markdownlint --ignore LICENSE.md --ignore .github/**/*.md"
     ]
   }
 }
