--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,6 @@ jobs:
       run: |
         npm ci
         npm test
-        npm run generate
+        npm run build
       env:
         CI: true
