--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "mix": "webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "start": "npm run clean && concurrently \"npm run watch:site\" \"npm run watch:assets\"",
     "lint:css": "stylelint src/scss/**/*.scss",
-		"lint:js": "eslint \"**/*.js\"",
-		"lint:md": "markdownlint \"**/***.md\" --ignore-path .gitignore --ignore LICENSE.md",
+    "lint:js": "eslint \"**/*.js\"",
+    "lint:md": "markdownlint \"**/***.md\" --ignore-path .gitignore --ignore LICENSE.md",
     "lint": "run-s lint:*",
     "lint-fix:css": "stylelint src/scss/**/*.scss --fix",
     "lint-fix:js": "eslint \"**/*.js\" --fix",
@@ -43,6 +43,7 @@
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@tbranyen/jsdom": "^13.0.0",
+    "autoprefixer": "^9.7.6",
     "axios": "^0.19.2",
     "concurrently": "^5.2.0",
     "cross-env": "^7.0.2",
@@ -74,7 +75,7 @@
     }
   },
   "lint-staged": {
-		"*.js": [
+    "*.js": [
       "eslint"
     ],
     "*.scss": [
