--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wecount/wecount.inclusivedesign.ca",
-  "version": "2.0.0-dev",
+  "version": "2.0.0",
   "description": "The source files for the We Count website, built with Eleventy.",
   "license": "BSD-3-Clause",
   "author": "OCAD University <idrc@ocadu.ca>",
