--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@11ty/eleventy": "^0.10.0",
     "@11ty/eleventy-plugin-rss": "^1.0.7",
+    "infusion": "^3.0.0-dev.20200326T173810Z.24ddb2718",
     "sanitize.css": "^11.0.0"
   },
   "devDependencies": {
