--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "dependencies": {
     "@11ty/eleventy": "^0.10.0",
     "@11ty/eleventy-plugin-rss": "^1.0.7",
-    "infusion": "^3.0.0-dev.20200326T173810Z.24ddb2718",
+    "infusion": "^3.0.0-dev.20200513T135321Z.3ebc41052.FLUID-6145",
     "sanitize.css": "^11.0.0"
   },
   "devDependencies": {
