--- a/package.json
+++ b/package.json
@@ -12,13 +12,9 @@
   ],
   "private": true,
   "scripts": {
-    "build:assets": "cross-env NODE_ENV=production run-s mix",
-    "build:site": "eleventy --config=eleventy.config.js",
-    "build": "run-s build:*",
-    "clean": "run-p clean:*",
-    "clean:dist": "rimraf dist",
-    "mix": "webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "start": "npm run clean && concurrently \"npm run watch:site\" \"npm run watch:assets\"",
+    "build": "npm run clean && eleventy --config=eleventy.config.js",
+    "clean": "rimraf dist",
+    "start": "npm run clean && ELEVENTY_ENV=development eleventy --serve --port=3000 --config=eleventy.config.js",
     "lint:css": "stylelint src/scss/**/*.scss",
     "lint:js": "eslint \"**/*.js\"",
     "lint:md": "markdownlint \"**/***.md\" --ignore-path .gitignore --ignore LICENSE.md",
@@ -29,14 +25,12 @@
     "lint-fix": "npm-run-all lint-fix:*",
     "release:major": "release major",
     "release:minor": "release minor",
-    "release:patch": "release patch",
-    "test": "run-s lint",
-    "watch:assets": "cross-env NODE_ENV=development run-s \"mix -- --watch\"",
-    "watch:site": "ELEVENTY_ENV=development eleventy --serve --port=3000 --config=eleventy.config.js"
+    "release:patch": "release patch"
   },
   "dependencies": {
     "@11ty/eleventy": "^0.10.0",
     "@11ty/eleventy-plugin-rss": "^1.0.7",
+    "eleventy-plugin-sass": "^1.0.0",
     "infusion": "3.0.0-dev.20200525T134420Z.23c88e1ba.UIO-WeCount",
     "sanitize.css": "^11.0.0"
   },
@@ -46,28 +40,21 @@
     "@tbranyen/jsdom": "^13.0.0",
     "autoprefixer": "^9.7.6",
     "axios": "^0.19.2",
-    "concurrently": "^5.2.0",
-    "cross-env": "^7.0.2",
     "eleventy-plugin-error-overlay": "^0.1.2",
     "eslint": "^6.8.0",
     "html-minifier": "^4.0.0",
     "husky": "^4.2.3",
-    "laravel-mix": "^5.0.4",
     "lint-staged": "^10.0.8",
     "markdown-it": "^10.0.0",
     "markdownlint-cli": "^0.22.0",
     "npm-run-all": "^4.1.5",
     "release": "^6.1.0",
-    "resolve-url-loader": "^3.1.0",
     "rimraf": "^3.0.2",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
     "slugify": "^1.4.0",
     "stylelint": "^13.2.1",
     "stylelint-config-standard-scss": "^1.1.0",
     "stylelint-order": "^4.0.0",
-    "stylelint-scss": "^3.15.0",
-    "vue-template-compiler": "^2.6.11"
+    "stylelint-scss": "^3.15.0"
   },
   "husky": {
     "hooks": {
