--- a/.github/workflows/lighthouse-desktop.yml
+++ b/.github/workflows/lighthouse-desktop.yml
@@ -23,6 +23,8 @@ jobs:
           ${{ steps.netlify.outputs.url }}/404.html
           ${{ steps.netlify.outputs.url }}/about/
           ${{ steps.netlify.outputs.url }}/inclusion-challenges/
+          ${{ steps.netlify.outputs.url }}/initiatives/
+          ${{ steps.netlify.outputs.url }}/learn/
           ${{ steps.netlify.outputs.url }}/news/
           ${{ steps.netlify.outputs.url }}/views/
           ${{ steps.netlify.outputs.url }}/views/page/11/
