--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@11ty/eleventy": "^0.11.0",
     "@11ty/eleventy-plugin-rss": "^1.0.7",
+    "airtable": "^0.8.1",
     "eleventy-plugin-sass": "^1.0.0",
     "infusion": "3.0.0-dev.20200525T134420Z.23c88e1ba.UIO-WeCount",
     "sanitize.css": "^11.0.1",
