--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,7 @@ jobs:
       run: |
         npm ci
         npm run lint
+        npm run build "$AIRTABLE_API_KEY"
       env:
         CI: true
+        AIRTABLE_API_KEY: ${{ secrets.AIRTABLE_API_KEY }}
