fix: debug Github CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,10 @@ jobs:
         path: node_modules
         key: ${{ runner.OS }}-build-${{ hashFiles('**/package-lock.json') }}
     - name: npm install and lint
-      run: |
-        npm ci
-        npm run lint
-        npm run build "$AIRTABLE_API_KEY"
       env:
         CI: true
         AIRTABLE_API_KEY: ${{ secrets.AIRTABLE_API_KEY }}
+      run: |
+        npm ci
+        npm run lint
+        npm run build "$AIRTABLE_API_KEY" "$CI"
