--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Test and build
+name: Test
 
 on: [push, pull_request]
 
@@ -12,10 +12,9 @@ jobs:
       with:
         path: node_modules
         key: ${{ runner.OS }}-build-${{ hashFiles('**/package-lock.json') }}
-    - name: npm install, build, and test
-      run: |
-        npm ci
-        npm test
-        npm run build
+    - name: npm install and lint
       env:
         CI: true
+      run: |
+        npm ci
+        npm run lint
