feat: in progress of adding a netlify function handling user comments

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,14 @@
   publish = "dist"
   functions = "functions"
 
+[dev]
+  command = "npm run start"
+  targetPort = 3000
+  publish = "dist"
+  autoLaunch = true
+  framework = "#custom"
+  functions = "functions"
+
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/:splat"
