--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "airtable": "^0.10.0",
     "eleventy-plugin-pwa": "^1.0.8",
     "eleventy-plugin-sass": "^1.1.1",
+    "fluid-covid-map-viz": "github:amb26/fluid-covid-map-viz#FLUID-6540",
     "infusion": "^3.0.0-dev.20200923T142259Z.a37069020.UIO-WeCount",
     "nodemailer": "^6.4.11",
     "sanitize.css": "^12.0.1",
