--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "eleventy-plugin-pwa": "^1.0.8",
     "eleventy-plugin-sass": "^1.1.1",
     "fluid-covid-map-viz": "github:amb26/fluid-covid-map-viz",
-    "infusion": "^3.0.0-dev.20200930T151056Z.d0b9e348d.FLUID-6145",
+    "infusion": "^3.0.0-dev.20201002T135209Z.347b39de6.UIO-WeCount",
     "nodemailer": "^6.4.11",
     "sanitize.css": "^12.0.1",
     "uuid": "^8.3.0"
