--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "airtable": "^0.10.0",
     "eleventy-plugin-pwa": "^1.0.8",
     "eleventy-plugin-sass": "^1.1.1",
-    "fluid-covid-map-viz": "github:amb26/fluid-covid-map-viz",
+    "fluid-covid-map-viz": "0.0.2",
     "infusion": "^3.0.0-dev.20201002T135209Z.347b39de6.UIO-WeCount",
     "nodemailer": "^6.4.11",
     "sanitize.css": "^12.0.1",
