--- a/package.json
+++ b/package.json
@@ -31,11 +31,15 @@
     "@11ty/eleventy": "^0.11.0",
     "@11ty/eleventy-plugin-rss": "^1.0.9",
     "airtable": "^0.10.0",
+    "axios": "^0.20.0",
     "eleventy-plugin-pwa": "^1.0.8",
     "eleventy-plugin-sass": "^1.1.1",
     "infusion": "^3.0.0-dev.20201007T193943Z.440be20ec.FLUID-6145",
+    "json5": "2.1.3",
     "nodemailer": "^6.4.11",
+    "rimraf": "3.0.2",
     "sanitize.css": "^12.0.1",
+    "simple-git": "2.24.0",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
@@ -43,7 +47,6 @@
     "@commitlint/config-conventional": "^11.0.0",
     "@tbranyen/jsdom": "^13.0.0",
     "autoprefixer": "^10.0.0",
-    "axios": "^0.20.0",
     "eleventy-plugin-error-overlay": "^0.1.2",
     "eslint": "^7.9.0",
     "html-minifier": "^4.0.0",
