chore: adjust markdownlint configuration

--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "start:cms": "concurrently \"npm start\" \"npx netlify-cms-proxy-server\"",
     "lint:css": "stylelint src/scss/**/*.scss",
     "lint:js": "eslint \"**/*.js\"",
-    "lint:md": "markdownlint \"**/***.md\" --ignore-path .gitignore --ignore LICENSE.md",
+    "lint:md": "markdownlint \"**/***.md\" --ignore-path .gitignore --ignore LICENSE.md --ignore src/workshops/",
     "lint": "run-s lint:*",
     "lint-fix:css": "stylelint src/scss/**/*.scss --fix",
     "lint-fix:js": "eslint \"**/*.js\" --fix",
-    "lint-fix:md": "markdownlint \"**/***.md\" --ignore-path .gitignore --ignore LICENSE.md --fix",
+    "lint-fix:md": "npm run lint:md -- --fix",
     "lint-fix": "npm-run-all lint-fix:*",
     "release:major": "release major",
     "release:minor": "release minor",
