feat: add CMS preview and add comment support

--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "private": true,
   "scripts": {
     "build": "npm run clean && eleventy --config=eleventy.config.js",
+    "build:cms": "./build-cms.js",
     "clean": "rimraf dist",
     "start": "npm run clean && ELEVENTY_ENV=development eleventy --serve --port=3000 --config=eleventy.config.js",
-		"start:debug": "DEBUG=Eleventy* npm start",
     "start:cms": "concurrently \"npm start\" \"npx netlify-cms-proxy-server\"",
+    "start:debug": "DEBUG=Eleventy* npm start",
     "lint:css": "stylelint src/scss/**/*.scss",
     "lint:js": "eslint \"**/*.js\"",
     "lint:md": "markdownlint \"**/***.md\" --ignore-path .gitignore --ignore LICENSE.md --ignore src/workshops/",
@@ -36,6 +37,7 @@
     "eleventy-plugin-pwa": "^1.0.8",
     "eleventy-plugin-sass": "^1.1.1",
     "infusion": "^3.0.0-dev.20210223T161058Z.1743e0020.FLUID-6580",
+    "netlify-cms-widget-uuid-v4": "^1.0.12",
     "nodemailer": "^6.4.18",
     "sanitize.css": "^12.0.1",
     "uuid": "^8.3.2"
@@ -49,12 +51,14 @@
     "concurrently": "^6.0.0",
     "eleventy-plugin-error-overlay": "^0.1.2",
     "eslint": "^7.20.0",
+    "estrella": "^1.4.0",
     "html-minifier": "^4.0.0",
     "husky": "^5.1.1",
     "lint-staged": "^10.5.4",
     "markdown-it": "^12.0.4",
     "markdownlint-cli": "^0.26.0",
     "npm-run-all": "^4.1.5",
+    "nunjucks": "^3.2.3",
     "release": "^6.3.0",
     "rimraf": "^3.0.2",
     "stylelint": "^13.11.0",
