chore: adjust build scripts to support local CMS, relocate collections

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -10,7 +10,7 @@ collections:
   - name: workshops
     label: Workshops
     label_singular: Workshop
-    folder: "src/workshops"
+    folder: "src/collections/workshops"
     slug: "{{title}}"
     create: true
     fields:
