--- a/package.json
+++ b/package.json
@@ -12,61 +12,62 @@
   ],
   "private": true,
   "scripts": {
-    "build": "npm run clean && eleventy --config=eleventy.config.js",
-    "build:cms": "./build-cms.js",
+    "build": "npm-run-all clean -s build:*",
+    "build:eleventy": "eleventy --config=eleventy.config.js",
+    "build:netlify-cms": "./build-cms.js",
     "clean": "rimraf dist",
-    "start": "npm run clean && ELEVENTY_ENV=development eleventy --serve --port=3000 --config=eleventy.config.js",
-    "start:cms": "concurrently \"npm start\" \"npx netlify-cms-proxy-server\"",
-    "start:debug": "DEBUG=Eleventy* npm start",
+    "dev": "cross-env ELEVENTY_ENV=development eleventy --serve --port=3000 --config=eleventy.config.js",
+    "start": "npm-run-all clean start:*",
+    "start:eleventy": "concurrently \"npm run dev\" \"./build-cms.js -w\" \"npx netlify-cms-proxy-server\"",
     "lint:css": "stylelint src/scss/**/*.scss",
     "lint:js": "eslint \"**/*.js\"",
-    "lint:md": "markdownlint \"**/***.md\" --ignore-path .gitignore --ignore LICENSE.md --ignore src/workshops/",
+    "lint:md": "markdownlint \"**/***.md\" --ignore-path .gitignore --ignore LICENSE.md --ignore src/collections/",
     "lint": "run-s lint:*",
-    "lint-fix:css": "stylelint src/scss/**/*.scss --fix",
-    "lint-fix:js": "eslint \"**/*.js\" --fix",
+    "lint-fix:css": "npm run lint:css -- --fix",
+    "lint-fix:js": "npm run lint:js -- --fix",
     "lint-fix:md": "npm run lint:md -- --fix",
-    "lint-fix": "npm-run-all lint-fix:*",
+    "lint-fix": "run-s lint-fix:*",
     "release:major": "release major",
     "release:minor": "release minor",
     "release:patch": "release patch"
   },
   "dependencies": {
-    "@11ty/eleventy": "^0.11.0",
-    "@11ty/eleventy-plugin-rss": "^1.1.0",
-    "airtable": "^0.10.0",
+    "@11ty/eleventy": "^0.12.1",
+    "@11ty/eleventy-plugin-rss": "^1.1.1",
+		"@tbranyen/jsdom": "^13.0.0",
+		"airtable": "^0.10.0",
+		"axios": "^0.21.1",
+		"estrella": "^1.4.0",
+		"html-minifier": "^4.0.0",
+		"netlify-cms-widget-uuid-v4": "^1.0.12",
+		"nodemailer": "^6.4.18",
+		"nunjucks": "^3.2.3",
+		"uuid": "^8.3.2",
+    "autoprefixer": "^10.2.4",
+    "concurrently": "^6.0.0",
     "eleventy-plugin-pwa": "^1.0.8",
-    "eleventy-plugin-sass": "^1.1.1",
+    "eleventy-plugin-sass": "^1.2.0",
     "infusion": "^3.0.0-dev.20210223T161058Z.1743e0020.FLUID-6580",
-    "netlify-cms-widget-uuid-v4": "^1.0.12",
-    "nodemailer": "^6.4.18",
-    "sanitize.css": "^12.0.1",
-    "uuid": "^8.3.2"
+    "markdown-it": "^12.0.4",
+    "sanitize.css": "^12.0.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^12.0.0",
+		"@commitlint/cli": "^12.0.0",
     "@commitlint/config-conventional": "^12.0.0",
-    "@tbranyen/jsdom": "^13.0.0",
-    "autoprefixer": "^10.2.4",
-    "axios": "^0.21.1",
-    "concurrently": "^6.0.0",
+    "cross-env": "^7.0.3",
     "eleventy-plugin-error-overlay": "^0.1.2",
-    "eslint": "^7.20.0",
     "eslint-plugin-react": "^7.23.1",
-    "estrella": "^1.4.0",
-    "html-minifier": "^4.0.0",
+    "eslint": "^7.20.0",
     "husky": "^5.1.1",
     "lint-staged": "^10.5.4",
-    "markdown-it": "^12.0.4",
     "markdownlint-cli": "^0.26.0",
     "npm-run-all": "^4.1.5",
-    "nunjucks": "^3.2.3",
     "release": "^6.3.0",
     "rimraf": "^3.0.2",
-    "stylelint": "^13.11.0",
     "stylelint-config-standard-scss": "^1.1.0",
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.19.0",
-    "turndown": "^7.0.0"
+    "stylelint": "^13.11.0"
   },
   "husky": {
     "hooks": {
