--- a/package.json
+++ b/package.json
@@ -29,20 +29,21 @@
     "lint-fix": "run-s lint-fix:*",
     "release:major": "release major",
     "release:minor": "release minor",
-    "release:patch": "release patch"
+    "release:patch": "release patch",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@11ty/eleventy": "^0.12.1",
     "@11ty/eleventy-plugin-rss": "^1.1.1",
-		"@tbranyen/jsdom": "^13.0.0",
-		"airtable": "^0.10.0",
-		"axios": "^0.21.1",
-		"estrella": "^1.4.0",
-		"html-minifier": "^4.0.0",
-		"netlify-cms-widget-uuid-v4": "^1.0.12",
-		"nodemailer": "^6.4.18",
-		"nunjucks": "^3.2.3",
-		"uuid": "^8.3.2",
+    "@tbranyen/jsdom": "^13.0.0",
+    "airtable": "^0.10.0",
+    "axios": "^0.21.1",
+    "estrella": "^1.4.0",
+    "html-minifier": "^4.0.0",
+    "netlify-cms-widget-uuid-v4": "^1.0.12",
+    "nodemailer": "^6.4.18",
+    "nunjucks": "^3.2.3",
+    "uuid": "^8.3.2",
     "autoprefixer": "^10.2.4",
     "concurrently": "^6.0.0",
     "eleventy-plugin-pwa": "^1.0.8",
@@ -52,28 +53,22 @@
     "sanitize.css": "^12.0.1"
   },
   "devDependencies": {
-		"@commitlint/cli": "^12.0.0",
+    "@commitlint/cli": "^12.0.0",
     "@commitlint/config-conventional": "^12.0.0",
     "cross-env": "^7.0.3",
     "eleventy-plugin-error-overlay": "^0.1.2",
-    "eslint-plugin-react": "^7.23.1",
     "eslint": "^7.20.0",
-    "husky": "^5.1.1",
+    "eslint-plugin-react": "^7.23.1",
+    "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
     "markdownlint-cli": "^0.26.0",
     "npm-run-all": "^4.1.5",
     "release": "^6.3.0",
     "rimraf": "^3.0.2",
+    "stylelint": "^13.11.0",
     "stylelint-config-standard-scss": "^1.1.0",
     "stylelint-order": "^4.1.0",
-    "stylelint-scss": "^3.19.0",
-    "stylelint": "^13.11.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
+    "stylelint-scss": "^3.19.0"
   },
   "lint-staged": {
     "*.js": [
