--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@commitlint/cli": "^12.0.0",
     "@commitlint/config-conventional": "^12.0.0",
     "cross-env": "^7.0.3",
+    "dotenv": "^8.2.0",
     "eleventy-plugin-error-overlay": "^0.1.2",
     "eslint": "^7.20.0",
     "eslint-plugin-react": "^7.23.1",
