feat: add documentation for CMS

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -14,13 +14,46 @@ collections:
     slug: "{{title}}"
     create: true
     fields:
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "ID", name: "id", widget: "uuid"}
-      - {label: "Event Date", name: "eventDate", widget: "datetime", time_format: false, required: false}
-      - {label: "Short Description", name: "shortDescription", widget: "markdown"}
-      - {label: "Permalink", name: "permalink", widget: "string", required: false}
-      - {label: "Preview Image", name: "previewImageUrl", widget: "image", required: false}
-      - {label: "Preview Image Alt Text", name: "previewImageAltText", widget: "string", required: false}
-      - {label: "Cover Image", name: "coverImageUrl", widget: "image", required: false}
-      - {label: "Cover Image Alt Text", name: "coverImageAltText", widget: "string", required: false}
-      - {label: "Body", name: "body", widget: "markdown"}
+      - label: "Event Title"
+        name: "title"
+        widget: "string"
+      - label: "Event ID"
+        name: "id"
+        widget: "uuid"
+        hint: "The ID is used to associate comments with this workshop and cannot be edited."
+      - label: "Permanent Link"
+        name: "permalink"
+        widget: "string"
+        required: false
+        hint: |-
+          If you do not specify a permanent link, one will be automatically generated from the event title.
+          Permalinks must have the format /initiatives/event-title/ (the trailing slash is required).
+      - label: "Event Date"
+        name: "eventDate"
+        widget: "datetime"
+        time_format: false
+        required: false
+      - label: "Cover Image"
+        name: "coverImageUrl"
+        widget: "image"
+        required: false
+      - label: "Cover Image Alt Text"
+        name: "coverImageAltText"
+        widget: "string"
+        required: false
+      - label: "Event Body"
+        name: "body"
+        widget: "markdown"
+      - label: "Short Description"
+        name: "shortDescription"
+        widget: "markdown"
+        hint: "The short description is shown on the Initiatives page."
+      - label: "Preview Image"
+        name: "previewImageUrl"
+        widget: "image"
+        required: false
+        hint: "The preview image is shown on the Initiatives page."
+      - label: "Preview Image Alt Text"
+        name: "previewImageAltText"
+        widget: "string"
+        required: false
