--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "stylelint": "^13.11.0",
     "stylelint-config-standard-scss": "^1.1.0",
     "stylelint-order": "^4.1.0",
-    "stylelint-scss": "^3.19.0"
+    "stylelint-scss": "^3.19.0",
+    "turndown": "^7.0.0"
   },
   "husky": {
     "hooks": {
