feat: add event date to sortable in CMS config

--- a/package.json
+++ b/package.json
@@ -38,20 +38,20 @@
     "@11ty/eleventy-plugin-rss": "^1.1.1",
     "@tbranyen/jsdom": "^13.0.0",
     "airtable": "^0.10.0",
-    "axios": "^0.21.1",
-    "estrella": "^1.4.0",
-    "html-minifier": "^4.0.0",
-    "netlify-cms-widget-uuid-v4": "^1.0.12",
-    "nodemailer": "^6.4.18",
-    "nunjucks": "^3.2.3",
-    "uuid": "^8.3.2",
     "autoprefixer": "^10.2.4",
+    "axios": "^0.21.1",
     "concurrently": "^6.0.0",
     "eleventy-plugin-pwa": "^1.0.8",
     "eleventy-plugin-sass": "^1.2.0",
+    "estrella": "^1.4.0",
+    "html-minifier": "^4.0.0",
     "infusion": "^3.0.0-dev.20210223T161058Z.1743e0020.FLUID-6580",
     "markdown-it": "^12.0.4",
-    "sanitize.css": "^12.0.1"
+    "netlify-cms-widget-uuid-v4": "^1.0.12",
+    "nodemailer": "^6.4.18",
+    "nunjucks": "^3.2.3",
+    "sanitize.css": "^12.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.0.0",
