feat: add dedicated login page

--- a/netlify.toml
+++ b/netlify.toml
@@ -18,6 +18,12 @@
 
 [[redirects]]
   from = "/admin/*"
-  to = 200
+  status = 200
   force = true
   conditions = {Role = ["admin"]}
+
+[[redirects]]
+  from = "/admin/*"
+  to = "/login"
+  status = 401
+  force = true
