--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "lint-fix:js": "npm run lint:js -- --fix",
     "lint-fix:md": "npm run lint:md -- --fix",
     "lint-fix": "run-s lint-fix:*",
+    "migrate:wp": "run-s build wp:*",
     "release:major": "release major",
     "release:minor": "release minor",
     "release:patch": "release patch",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "wp:pages": "cp dist/pages/*.md src/collections/pages"
   },
   "dependencies": {
     "@11ty/eleventy": "^0.12.1",
