--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "axios": "^0.21.1",
     "concurrently": "^6.0.0",
     "eleventy-plugin-pwa": "^1.0.8",
-    "eleventy-plugin-sass": "^1.2.0",
     "estrella": "^1.4.0",
     "html-minifier": "^4.0.0",
     "infusion": "^3.0.0-dev.20210223T161058Z.1743e0020.FLUID-6580",
@@ -56,7 +55,9 @@
   "devDependencies": {
     "@commitlint/cli": "^12.0.0",
     "@commitlint/config-conventional": "^12.0.0",
+    "clean-css": "^5.1.2",
     "cross-env": "^7.0.3",
+    "cssesc": "^3.0.0",
     "dotenv": "^8.2.0",
     "eleventy-plugin-error-overlay": "^0.1.2",
     "eslint": "^7.20.0",
@@ -67,6 +68,7 @@
     "npm-run-all": "^4.1.5",
     "release": "^6.3.0",
     "rimraf": "^3.0.2",
+    "sass": "^1.32.8",
     "stylelint": "^13.11.0",
     "stylelint-config-standard-scss": "^1.1.0",
     "stylelint-order": "^4.1.0",
