feat: enable role-based permissions for Netlify CMS (fix #470) (#471)
* feat: enable role-based permissions for Netlify CMS (fix #470)

* feat: add dedicated login page

* fix: simplify redirect logic

* feat: add login link to home page

* feat: try extra redirect rule

* Revert "feat: try extra redirect rule"

631ae989e4346aade61e85a774c01c707cbceee8

* fix: remove unused route from PWA exclusions

--- a/netlify.toml
+++ b/netlify.toml
@@ -15,3 +15,9 @@
   from = "/api/*"
   to = "/.netlify/functions/:splat"
   status = 200
+
+[[redirects]]
+  from = "/admin/*"
+  status = 200
+  force = true
+  conditions = {Role = ["admin"]}
