--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "private": true,
   "scripts": {
     "build": "npm-run-all clean -s build:*",
-    "build:eleventy": "eleventy --config=eleventy.config.js",
+    "build:eleventy": "eleventy",
     "build:netlify-cms": "./build-cms.js",
     "clean": "rimraf dist",
-    "dev": "cross-env ELEVENTY_ENV=development eleventy --serve --port=3000 --config=eleventy.config.js",
+    "dev": "cross-env ELEVENTY_ENV=development eleventy --serve --port=3000",
     "start": "npm-run-all clean start:*",
-    "start:eleventy": "concurrently \"npm run dev\" \"./build-cms.js -w\" \"npx netlify-cms-proxy-server\"",
+    "start:eleventy": "concurrently \"npm run dev\" \"./build-cms.js -w\" \"netlify-cms-proxy-server\"",
     "serve": "npx serve dist",
     "lint:css": "stylelint src/scss/**/*.scss",
     "lint:js": "eslint \"**/*.js\"",
@@ -65,6 +65,7 @@
     "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
     "markdownlint-cli": "^0.26.0",
+    "netlify-cms-proxy-server": "^1.3.12",
     "npm-run-all": "^4.1.5",
     "release": "^6.3.0",
     "rimraf": "^3.0.2",
