chore: change CMS branch to main

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: git-gateway
-  branch: dev
+  branch: main
 local_backend: true
 publish_mode: editorial_workflow
 site_url: "https://wecount.inclusivedesign.ca"
