feat: implement Eleventy Navigation, refine About and Initiatives

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@11ty/eleventy": "^0.12.1",
+    "@11ty/eleventy-navigation": "^0.1.6",
     "@11ty/eleventy-plugin-rss": "^1.1.1",
     "@tbranyen/jsdom": "^13.0.0",
     "airtable": "^0.10.0",
